--- a/src/app/presentation/pages/management/stores/stores-management.component.scss
+++ b/src/app/presentation/pages/management/stores/stores-management.component.scss
@@ -110,8 +110,8 @@
   .store-card__chips {
     display: flex;
     flex-wrap: nowrap;
-    gap: 0.35rem;
-    margin-top: 0.15rem;
+    gap: 0.25rem;
+    margin-top: 0.25rem;
     overflow: hidden;
   }
 
